<resources>
    <string name="app_name">Brewzor</string>
    <string name="app_name_long">Brewzor Brewing Calculator</string>
	<string name="window_title_format">%s: %s</string>
	<string name="options_menu_settings">Settings</string>
	<string name="options_menu_help">Help</string>
	<string name="options_menu_about">About</string>
	<string name="mash_step_infusion">Infusion</string>
	<string name="mash_step_decoction">Decoction</string>
	<string name="mash_step_temperature">Temperature</string>
	<string name="recipe">Recipe</string>
	<string name="recipe_fermentables_title">Fermentables:</string>
	<string name="recipe_extract">Extract</string>
	<string name="recipe_partial_mash">Partial Mash</string>
	<string name="recipe_all_grain">All Grain</string>
	<string name="recipe_og">OG:</string>
	<string name="recipe_grain_weight">Grain Weight:</string>
	<string name="recipe_new_recipe">New Recipe</string>
	<string name="recipe_name">Recipe Name:</string>
	<string name="recipe_name_hint">My Recipe</string>
	<string name="recipe_cancel">Cancel</string>
	<string name="recipe_save_schedule">Save</string>
	<string name="recipe_mash_title">Mash Steps:</string>
	<string name="recipe_add_mash_event_title">Add Mash Step</string>
	<string name="recipe_add_step">Add Step</string>
	<string name="recipe_mash_list_item_format">%01.1f%s for %01d minutes - %s</string>
	<string name="recipe_boil_title">Boil Additions:</string>
	<string name="recipe_add_boil_event_title">Add Boil Alarm</string>
	<string name="recipe_add_alarm">Add</string>
	<string name="recipe_boil_list_item_format">%01d minutes - %s</string>
	<string name="recipe_cancel_schedule">@string/recipe_cancel</string>
	<string name="recipe_mash_duration">Mash Time:</string>
	<string name="recipe_boil_duration">Boil Time:</string>
	<string name="recipe_error_name">Enter a name for this brew schedule</string>
	<string name="recipe_error_mash_name">Enter a name for the step</string>
	<string name="recipe_error_mash_duration">Enter a mash time in minutes</string>
	<string name="recipe_error_mash_temperature">Enter a mash temperature</string>
	<string name="recipe_error_mash_ratio">Water / grain ratio should be greater than zero</string>
	<string name="recipe_error_mash_step_exists">This mash step already exists</string>
	<string name="recipe_error_mash_too_hot">Temperature can't be above boiling</string>
	<string name="recipe_error_boil_time">Enter a time greater than or equal to zero</string>
	<string name="recipe_error_boil_event_exists">An alarm already exists for that time</string>
	<string name="recipe_error_boil_time_over">Time can't be greater than the boil time</string>
	<string name="recipe_error_database">Database error</string>
	<string name="recipe_error_boil_duration">Enter a boil time in minutes</string>
	<string name="boil_timer">Boil Timer</string>
	<string name="timer_notification_text">Notification text!</string>
	<string name="set_preferences">Set Preferences</string>
	<string name="preference_screen_title">Brewzor Preferences</string>
	<string name="general_settings">General Settings</string>
	<string name="global_unit_change_pref">Global Unit Change</string>
	<string name="global_unit_change_pref_summary">Use this to change all units to US or Metric at once</string>
	<string name="temperature_units_pref">Temperature</string>
	<string name="temperature_units_pref_summary">Celsius, Fahrenheit</string>
	<string name="temperature_units_pref_default">FAHRENHEIT</string>
	<string name="gravity_units_pref">Gravity</string>
	<string name="gravity_units_pref_summary">SG, Plato, GU, Brix</string>
	<string name="gravity_units_pref_default">SG</string>
	<string name="use_refractometer_correction_pref">Use Refractometer Correction Factor</string>
	<string name="use_refractometer_correction_pref_default">false</string>
	<string name="use_refractometer_correction_pref_summaryoff">Refractometer correction factor will not be applied</string>
	<string name="use_refractometer_correction_pref_summaryon">Refractometer correction factor will be applied</string>
	<string name="refractometer_correction_factor_pref">Refractometer Correction Factor</string>
	<string name="refractometer_correction_factor_pref_default">1.04</string>
	<string name="refractometer_correction_factor_pref_format">%s (Accounts for non-sugar related components of the wort)</string>
	<string name="pressure_units_pref">Pressure</string>
	<string name="pressure_units_pref_summary">PSI, kPa, Bar, Atmosphere</string>
	<string name="pressure_units_pref_default">PSI</string>
	<string name="hydrometer_calibration_temperature_pref">Hydrometer Calibration Temperature</string>
	<string name="hydrometer_calibration_temperature_pref_default">60</string>
	<string name="hydrometer_calibration_temperature_pref_summary_format">%s%s (Usually 60 or 68°F / 15 or 20°C)</string>
	<string name="extract_mass_units_pref">DME / LME Weight</string>
	<string name="extract_mass_units_pref_summary">Grams, Kilograms, Ounces, Pounds</string>
	<string name="extract_mass_units_pref_default">OUNCE</string>
	<string name="batch_settings">Batch Settings</string>
	<string name="batch_volume_units_pref">Batch Volume Units</string>
	<string name="batch_volume_units_pref_summary">Quarts, Gallons, Liters, etc.</string>
	<string name="batch_volume_units_pref_default">GALLON</string>
	<string name="batch_mash_volume_units_pref">Mash Infusion Volume Units</string>
	<string name="batch_mash_volume_units_pref_summary">Quarts, Gallons, Liters, etc.</string>
	<string name="batch_mash_volume_units_pref_default">GALLON</string>
	<string name="final_volume_pref">Final Batch Volume</string>
	<string name="final_volume_pref_summary">Quarts, Gallons, Liters, etc.</string>
	<string name="final_volume_pref_default">0</string>
	<string name="grain_mass_units_pref">Grain Weight Units</string>
	<string name="grain_mass_units_pref_summary">Grams, Kilograms, Ounces, Pounds</string>
	<string name="grain_mass_units_pref_default">0</string>
	<string name="water_to_grain_ratio_pref">Water To Grain Ratio</string>
	<string name="water_to_grain_ratio_pref_default">0</string>
	<string name="water_to_grain_ratio_pref_summary_format">%s %s per %s (Usually equivalent to 1-1.25 quarts per pound)</string>
	<string name="grain_absorption_ratio_pref">Grain Absorption Ratio</string>
	<string name="grain_absorption_ratio_pref_default">0</string>
	<string name="grain_absorption_ratio_pref_summary_format">%s %s per %s (Usually equivalent to 1-1.25 quarts per pound)</string>
	<string name="grain_volume_ratio_pref">Water To Grain Ratio</string>
	<string name="grain_volume_ratio_pref_default">0</string>
	<string name="grain_volume_ratio_pref_summary_format">%s %s per %s (Usually equivalent to 1-1.25 quarts per pound)</string>
	<string name="mash_minutes_pref">Mash Minutes</string>
	<string name="mash_minutes_pref_summary">Usually 60-90 minutes</string>
	<string name="mash_minutes_pref_default">60</string>
	<string name="boil_minutes_pref">Boil Minutes</string>
	<string name="boil_minutes_pref_summary">Usually 60-90 minutes</string>
	<string name="boil_minutes_pref_default">60</string>
	<string name="mash_infusion_water_temperature_pref">Mash Infusion Water Temperature</string>
	<string name="mash_infusion_water_temperature_pref_summary">Usually between 170°F and 212°F</string>
	<string name="mash_infusion_water_temperature_pref_default">212</string>
	<string name="equipment_settings">Equipment Settings</string>
	<string name="diameter_height_units_pref">Kettle Diameter / Height Units</string>
	<string name="diameter_height_units_pref_summary">Centimeters, Inches</string>
	<string name="diameter_height_units_pref_default">INCH</string>
	<string name="kettle_diameter_pref">Kettle Diameter</string>
	<string name="kettle_diameter_pref_summary">Used for volume calculations</string>
	<string name="kettle_diameter_pref_default">0</string>
	<string name="false_bottom_height_pref">False Bottom Height</string>
	<string name="false_bottom_height_pref_summary">Used for volume calculations</string>
	<string name="false_bottom_height_pref_default">0</string>
	<string name="equipment_loss_pref">Total Equipment Loss</string>
	<string name="equipment_loss_pref_summary_format">%s %s (Calculated by adding up mash tun deadspace, trub loss, etc.)</string>
	<string name="equipment_loss_pref_default">0</string>
	<string name="evaporation_rate_pref">Evaporation Rate % per Hour</string>
	<string name="evaporation_rate_pref_summary">Usually between 5 and 15%</string>
	<string name="evaporation_rate_pref_default">10</string>
	<string name="correct_for_expansion_pref">Correct for heat expansion</string>
	<string name="correct_for_expansion_pref_summary">Use cooling loss value to compensate calculated volumes for heat expansion</string>
	<string name="correct_for_expansion_pref_default">true</string>
	<string name="cooling_loss_percentage_pref">Cooling Loss Percentage</string>
	<string name="cooling_loss_percentage_pref_summary">Usually 4% for boiling and 3% for mash temperatures</string>
	<string name="cooling_loss_percentage_pref_default">4</string>
	<string name="gravity_correction">Gravity Correction</string>
	<string name="current_gravity">Current</string>
	<string name="desired_gravity">Desired</string>
	<string name="wort_volume">Wort Volume</string>
	<string name="add_water_format">Add %02.2f %s of water.</string>
	<string name="add_extract_format">"Add %02.2f %s DME\n OR \nAdd %02.2f %s LME"</string>
	<string name="add_nothing_format">You're all good.</string>
	<string name="cylinder_volume">Kettle Volume from Height</string>
	<string name="kettle_diameter">Diameter</string>
	<string name="measured_height">Height</string>
	<string name="false_bottom_height">False Bottom</string>
	<string name="diameter_default">@string/double_default</string>
	<string name="height_default">@string/double_default</string>
	<string name="false_bottom_height_default">@string/double_default</string>
	<string name="calculated_cylinder_volume_default">@string/double_default</string>
	<string name="kettle_diameter_summary">The diameter of your brew kettle</string>
	<string name="false_bottom_height_summary">Use 0 (zero) if you don\'t have a false bottom, otherwise use the height.</string>
	<string name="correct_for_expansion_format">%01.0f%% heat expansion</string>
	<string name="correct_for_loss_format">%01.0f%% cooling loss</string>
	<string name="no_expansion">No expansion</string>
	<string name="cylinder_height">Kettle Height from Volume</string>
	<string name="desired_volume">Volume</string>
	<string name="mash_infusion_current_mash_temperature">Current Temperature</string>
	<string name="mash_infusion_grain_weight">Grain Weight</string>
	<string name="mash_infusion_water_in_mash_volume">Water in Mash</string>
	<string name="mash_infusion_target_mash_temperature">Target Temperature</string>
	<string name="mash_infusion_calculated_infusion_temperature_default">0.00</string>
	<string name="ending_volume">Ending Volume</string>
	<string name="evaporation_rate">Evaporation Rate</string>
	<string name="boil_time">Boil Minutes</string>
	<string name="volume_boiled_off">Boiled Off Volume</string>
	<string name="cooling_loss_percentage">Cooling Loss</string>
	<string name="cooling_loss_volume">Cooling Loss Volume</string>
	<string name="alcohol_attenuation_current_gravity">Current Gravity</string>
	<string name="alcohol_attenuation_original_gravity">Original Gravity</string>
	<string name="alcohol_attenuation_abv">Alcohol by Volume</string>
	<string name="alcohol_attenuation_abw">Alcohol by Weight</string>
	<string name="alcohol_attenuation_apparent_attenuation">Apparent Attenuation</string>
	<string name="alcohol_attenuation_real_attenuation">Real Attenuation</string>
	<string name="corrected_sg">Corrected SG</string>
	<string name="sg_abbr">SG</string>
	<string name="sg_default">1.000</string>
	<string name="double_default">0.00</string>
	<string name="percent_sign">%</string>
</resources>