<?xml version="1.0" encoding="utf-8"?>
<!-- 

    This file is part of Brewzor.

    Copyright (C) 2010 James Whiddon

    Brewzor is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Brewzor is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Brewzor.  If not, see <http://www.gnu.org/licenses/>.

-->
<LinearLayout	xmlns:android="http://schemas.android.com/apk/res/android"
				style="@style/portrait_layout"
				>

	<TableLayout	style="@style/entry_table"
					>

		<TableRow>

			 <Button	android:id="@+id/startEndToggle"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_gravity="center_vertical"
						android:gravity="center" 
						/>
 
			<EditText	android:id="@+id/startingVolumeEntry" 
						style="@style/decimal_entry" 
						/>

			<TextView 	android:id="@+id/startingVolumeUnitType" 
						style="@style/label_text" 
						/>

		</TableRow>

		<TableRow>

			<TextView 	style="@style/label_text"
						android:text="@string/evaporation_rate" 
						/>

			<EditText 	android:id="@+id/evaporationRateEntry" 
						style="@style/integer_entry" 
						/>

			<TextView 	android:text="@string/percent_sign" 
						style="@style/label_text" 
						/>

		</TableRow>

		<TableRow>

			<TextView 	style="@style/label_text"
						android:text="@string/boil_time" 
						/>

			<EditText 	android:id="@+id/boilTimeEntry"
						style="@style/integer_entry" 
						/>

		</TableRow>

		<TableRow>

			<TextView 	style="@style/label_text"
						android:text="@string/cooling_loss_percentage" 
						/>

			<EditText 	android:id="@+id/coolingLossPercentageEntry"
						style="@style/integer_entry" 
						/>

			<TextView 	android:text="@string/percent_sign" 
						style="@style/label_text" 
						/>

		</TableRow>

	</TableLayout>

	<TableLayout	android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:layout_gravity="center"
					style="@style/entry_table"
				    >

		<TableRow>

			<TextView 	style="@style/label_text"
						android:text="@string/volume_boiled_off" 
						/>

			<TextView 	android:id="@+id/calculatedVolumeBoiledOff" 
						style="@style/small_result"
						android:text="@string/double_default" 
						/>

			<TextView 	android:id="@+id/calculatedVolumeBoiledOffUnitType"
						style="@style/label_text" 
						/>

		</TableRow>

		<TableRow>

			<TextView 	style="@style/label_text"
						android:text="@string/cooling_loss_volume" 
						/>
	
			<TextView 	android:id="@+id/calculatedCoolingLossVolume"
						style="@style/small_result" 
						android:text="@string/double_default" 
						/>

			<TextView 	android:id="@+id/calculatedCoolingLossVolumeUnitType"
						style="@style/label_text" 
						/>

		</TableRow>

		<TableRow>

			<TextView 	style="@style/label_text"
						android:id="@+id/resultDescription"
						android:text="@string/ending_volume" 
						/>

			<TextView 	android:id="@+id/calculatedFinalVolume" 
						style="@style/small_result"
        				android:layout_gravity="center_vertical"
						android:text="@string/double_default" 
						/>

			<TextView 	android:id="@+id/calculatedFinalVolumeUnitType"
						style="@style/label_text" 
						/>

		</TableRow>

	</TableLayout>

</LinearLayout>

