<?xml version="1.0" encoding="UTF-8"?>
<!-- 

    This file is part of Brewzor.

    Copyright (C) 2010 James Whiddon

    Brewzor is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Brewzor is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Brewzor.  If not, see <http://www.gnu.org/licenses/>.

-->
<LinearLayout	xmlns:android="http://schemas.android.com/apk/res/android"
 	         	style="@style/portrait_layout"
 	         	>
	
	<Spinner 	android:id="@+id/unitTypeSpinner"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:entries="@array/gravityUnitsList"
				android:entryValues="@array/gravityUnitsIdList"
				android:drawSelectorOnTop="true" 
				/>

	<TableLayout	style="@style/entry_table">

		<TableRow>
	
				<TextView	style="@style/label_text" 
							android:text="@string/alcohol_attenuation_original_gravity" 
							/>
	
				<EditText	android:id="@+id/originalEntry" 
							style="@style/decimal_entry" 
							/>
	
				<TextView	android:id="@+id/originalUnitType" 
							style="@style/label_text" 
							/>
	
			</TableRow>

			<TableRow>
	
				<TextView	style="@style/label_text" 
							android:text="@string/alcohol_attenuation_current_gravity" 
							/>
	
				<EditText	android:id="@+id/currentEntry" 
							style="@style/decimal_entry" />
	
				<TextView	android:id="@+id/currentUnitType" 
							style="@style/label_text" />
	
			</TableRow>

		</TableLayout>			  

		<TableLayout	style="@style/entry_table"
						android:layout_height="fill_parent"
						android:layout_width="wrap_content"
						android:layout_weight="1"
						>

			<TableRow>
	
				<TextView	style="@style/label_text" 
							android:text="@string/alcohol_attenuation_abv" />
	
				<TextView	android:id="@+id/abv"
							android:gravity="right" 
							style="@style/small_result" />
		
			</TableRow>

			<TableRow>
	
				<TextView	style="@style/label_text" 
							android:text="@string/alcohol_attenuation_abw" />
	
				<TextView	android:id="@+id/abw" 
							android:gravity="right" 
							style="@style/small_result" />
		
			</TableRow>

			<TableRow>
	
				<TextView	style="@style/label_text" 
							android:text="@string/alcohol_attenuation_apparent_attenuation" />
	
				<TextView	android:id="@+id/aa" 
							android:gravity="right" 
							style="@style/small_result" />
		
			</TableRow>

			<TableRow>
	
				<TextView	style="@style/label_text" 
							android:text="@string/alcohol_attenuation_real_attenuation" />
	
				<TextView	android:id="@+id/ra" 
							android:gravity="right" 
							style="@style/small_result" />
		
			</TableRow>
<!-- 
			<TableRow>
	
				<TextView style="@style/label_text" android:text="@string/alcohol_attenuation_calories" />
	
				<TextView android:id="@+id/calories" android:gravity="right" style="@style/label_text" />
		
			</TableRow>
 -->
		</TableLayout>
	
</LinearLayout>