<?xml version="1.0" encoding="utf-8"?>
<!-- 

    This file is part of Brewzor.

    Copyright (C) 2010 James Whiddon

    Brewzor is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Brewzor is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Brewzor.  If not, see <http://www.gnu.org/licenses/>.

-->
<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
				style="@style/portrait_layout"
				>
	<TableLayout	style="@style/entry_table"
					>

			<TableRow>

				<EditText	android:id="@+id/SGEntry" 
							style="@style/sg_entry" 
							/>

				<TextView	android:text="@string/sg_abbr" 
							style="@style/label_text" 
							/>

			</TableRow>

			<TableRow>

				<EditText	android:id="@+id/temperatureEntry"	
							style="@style/decimal_entry" 
							/>

				<TextView	android:id="@+id/temperatureUnitType"
							style="@style/label_text" 
							/>

			</TableRow>
			
		</TableLayout>
	
		<TextView	style="@style/label_text"
					android:id="@+id/calibrationText" 
					android:gravity="center"
					android:layout_gravity="center"
					android:layout_width="fill_parent"
					/>
			
	<LinearLayout	android:orientation="vertical"
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
					android:gravity="center"
					>

		<TextView	style="@style/small_result"
					android:text="@string/corrected_sg" 
					/>

		<TextView	android:id="@+id/calculatedCorrectedSG" 
					style="@style/large_result"
					android:text="@string/sg_default" 
					/>

	</LinearLayout>

</LinearLayout>
